# mutewhistle

./: README.md  app.config.js  index.html
mwc-app/: .gitignore  App.tsx  app.json  package-lock.json  package.json
mwc-app/android/: settings.gradle
mwc-app/android/app/: build.gradle
mwc-app/android/app/src/main/: AndroidManifest.xml
mwc-app/app/: _layout.tsx
mwc-app/app/(apps)/: _layout.tsx
mwc-app/app/(apps)/(tabs)/: _layout.tsx  index.tsx  receive.tsx  send.tsx
mwc-app/app/(home)/: Home.tsx  LegalDisclaimer.tsx  LegalDisclaimerSlice.tsx  NewPassword.tsx  NewPasswordSlice.tsx  Password.tsx  VerifyPaperKey.tsx  ViewPaperKey.tsx  _layout.tsx
mwc-app/app/home/: Home.tsx  _layout.tsx
mwc-app/app/sign-in/: Sign-in.tsx  SignInSlice.tsx
mwc-app/ios/: Podfile
mwc-app/ios/mwcapp/: Info.plist
mwc-app/ios/mwcapp.xcodeproj/: project.pbxproj
mwc-app/ios/mwcapp.xcodeproj/xcshareddata/xcschemes/: mwcapp.xcscheme
mwc-app/ios/mwcapp.xcworkspace/: contents.xcworkspacedata
mwc-app/modules/mwc-module/: expo-module.config.json  index.ts
mwc-app/modules/mwc-module/android/: build.gradle
mwc-app/modules/mwc-module/ios/: MwcModule.podspec  MwcModule.swift  MwcModuleView.swift
mwc-app/modules/mwc-module/ios/rust/: mwc_wallet_lib.h
mwc-app/modules/mwc-module/src/: MwcModule.ts  MwcModule.types.ts  MwcModuleView.tsx  MwcModuleView.web.tsx
mwc-app/modules/mwc-module/src/auth/: ctx.tsx
mwc-app/modules/mwc-module/src/common/: color.tsx  index.tsx  types.tsx  (+1 more)
mwc-app/rust/: Cargo.toml  build.rs
mwc-app/rust/src/: ios.rs  lib.rs  main  main.rs  main.rs.bkk
(+15 files in other folders)
